--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,7 +18,8 @@
     "react-big-calendar": "^1.11.6",
     "react-dom": "^18.2.0",
     "react-icons": "^5.1.0",
-    "react-router-dom": "^6.23.0"
+    "react-router-dom": "^6.23.0",
+    "react-calendar": "^4.8.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
