--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@fullcalendar/interaction": "^6.1.11",
     "@fullcalendar/react": "^6.1.11",
     "animate.css": "^4.1.1",
+    "emailjs-com": "^3.2.0",
     "react": "^18.2.0",
     "react-big-calendar": "^1.11.6",
     "react-calendar": "^4.8.0",
@@ -21,7 +22,6 @@
     "react-icons": "^5.2.0",
     "react-router-dom": "^6.23.0"
   },
-  
   "devDependencies": {
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
