--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,10 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@formspree/react": "^2.5.1",
     "@fullcalendar/daygrid": "^6.1.11",
     "@fullcalendar/interaction": "^6.1.11",
     "@fullcalendar/react": "^6.1.11",
     "animate.css": "^4.1.1",
+    "axios": "^1.6.8",
     "react": "^18.2.0",
     "react-big-calendar": "^1.11.6",
     "react-calendar": "^4.8.0",
