--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@fullcalendar/interaction": "^6.1.11",
     "@fullcalendar/react": "^6.1.11",
     "animate.css": "^4.1.1",
+    "emailjs-com": "^3.2.0",
     "axios": "^1.6.8",
     "react": "^18.2.0",
     "react-big-calendar": "^1.11.6",
