--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "react-calendar": "^4.8.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.0",
+    "react-intersection-observer": "^9.10.2",
     "react-router-dom": "^6.23.0"
   },
   "devDependencies": {
