--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,10 +26,10 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.0",
     "react-router-dom": "^6.23.0",
-    "three": "^0.164.1"
+    "three": "^0.164.1",
     "react-intersection-observer": "^9.10.2"
    
-    
+
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
