--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,11 +25,10 @@
     "react-calendar": "^4.8.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.0",
+    "react-intersection-observer": "^9.10.2",
+    "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^6.23.0",
-    "three": "^0.164.1",
-    "react-intersection-observer": "^9.10.2"
-   
-
+    "three": "^0.164.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
