--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,9 +19,11 @@
     "@types/three": "^0.164.0",
     "animate.css": "^4.1.1",
     "axios": "^1.6.8",
+    "bootstrap": "^5.3.3",
     "emailjs-com": "^3.2.0",
     "react": "^18.2.0",
     "react-big-calendar": "^1.11.6",
+    "react-bootstrap": "^2.10.2",
     "react-calendar": "^4.8.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.0",
