--- a/backend/package.json
+++ b/backend/package.json
@@ -6,15 +6,17 @@
   "type": "module",
   "scripts": {
     "start": "  nodemon server.js",
-    "seed" : "node src/seeder/serviceSeeder.js  ",
+    "seed": "node src/seeder/serviceSeeder.js  ",
     "dev": "nodemon server.js",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
     "@formspree/react": "^2.5.1",
+    "@sendgrid/mail": "^8.1.3",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-validator": "^7.0.1",
